--- a/index.html
+++ b/index.html
@@ -1,3 +1,40 @@
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Welcome to JutsuX</title>
+  </head>
+  <body>
+    <h1>Chinemeze Joel</h1>
+    <h2>I am a Software Developer</h2>
+    <hr />
+    <h3>Projects</h3>
+    <ol>
+      <li>
+        <h4><a href="./public/movie-ranking.html">Movie Ranking Project</a></h4>
+      </li>
+      <img
+        src="./assets/images/movie-ranking.png"
+        height="200"
+        alt="Movie ranking project preview"
+      />
+      <li>
+        <h4>
+          <a href="./public/birthday-invite.html">Birthday Invite Project</a>
+        </h4>
+      </li>
+      <img
+        src="./assets/images/birthday-invite.png"
+        height="200"
+        alt="birthday invite project preview"
+      />
+    </ol>
+    <hr />
+    <a href="./public/about.html">About Me</a>
+    <a href="./public/contact.html">Contact Me</a>
+  </body>
+</html>
+
 <!-- TODO 1: Create the HTML Boilerplate -->
 
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
