--- a/index.html
+++ b/index.html
@@ -2,51 +2,83 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8" />
-    <title>Welcome to JutsuX</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Resume</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Chinemeze Joel</h1>
-    <h2>I am a Software Developer</h2>
+    <h1>My Resume</h1>
+    <img
+      src="./assets/images/IMG_4616.jpeg"
+      alt="Profile Image"
+      height="200px"
+    />
+    <h2>Akubuenyi Joel</h2>
+    <h3>Summary</h3>
+    <p>
+      I make beautiful solutions for your brand and business, using web
+      development technologies.
+    </p>
     <hr />
-    <h3>Projects</h3>
-    <ol>
+    <h3>Education</h3>
+    <ul>
       <li>
-        <h4><a href="./public/movie-ranking.html">Movie Ranking Project</a></h4>
+        Bachelor of Engineering, Mechanical Engineering. Chukwuemeka Odumegwu
+        Ojukwu University, uli (2018-2023)
       </li>
-      <img
-        src="./assets/images/movie-ranking.png"
-        height="200"
-        alt="Movie ranking project preview"
-      />
-      <li>
-        <h4>
-          <a href="./public/birthday-invite.html">Birthday Invite Project</a>
-        </h4>
-      </li>
-      <img
-        src="./assets/images/birthday-invite.png"
-        height="200"
-        alt="birthday invite project preview"
-      />
-    </ol>
+    </ul>
     <hr />
-    <a href="./public/about.html">About Me</a>
-    <a href="./public/contact.html">Contact Me</a>
+    <h3>Work Experience</h3>
+    <ul>
+      <li>
+        <h4>Mechanical Engineering Intern - Mark IV Nig.</h4>
+        <p>June 2022 - November 2022</p>
+        <ul>
+          <li>
+            Maintained customer records and took inventory of store stocks
+          </li>
+          <li>Answered customer inquiries via phone and email</li>
+          <li>
+            Assisted in making Standard operation procedures for client work
+          </li>
+        </ul>
+      </li>
+      <li>
+        <h4>Assistant Design Engineer - Nutabolts Technologies</h4>
+        <p>August 2019 - December 2023</p>
+        <ul>
+          <li>Became Soliworks certified Assoscaite</li>
+          <li>Made valid contributions as to tolerance design</li>
+          <li>Assisted in onboarding of new interns</li>
+        </ul>
+      </li>
+    </ul>
+    <hr />
+
+    <h3>Skills</h3>
+    <ul>
+      <li>HTML5</li>
+      <li>CSS3</li>
+      <li>Bootstrap</li>
+      <li>Analytical Mind</li>
+    </ul>
+    <hr />
+
+    <h3>Awards and Certifications</h3>
+    <ul>
+      <li>Solidworks Certified Associate 2020</li>
+      <li>Best Intern of the Month - Mark IV Nig.</li>
+      <li>Best Intern of the Month - Nutabolts Technologies</li>
+    </ul>
+    <hr />
+    <h3>Other</h3>
+    <ul>
+      <li><a href="hobbies.html">My Hobbies</a></li>
+      <li><a href="contact.html">Contact Me</a></li>
+    </ul>
+    <hr />
+    <footer>
+      <p>© 2025 JoeJutsuX. All rights reserved</p>
+    </footer>
   </body>
 </html>
-
-<!-- TODO 1: Create the HTML Boilerplate -->
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
